# dephell_archive

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
dephell_archive/: __init__.py  _glob.py  _path.py  _stream.py
tests/: conftest.py  test_dir_list.py  test_glob.py  test_path.py  test_path_tar.py  test_path_zip.py
